--- a/css/descricao.css
+++ b/css/descricao.css
@@ -1,1 +1,15 @@
 .h1descricao{color: #0277BD; text-align: center;}
+
+.h2descricao{color: white ; margin-left: 10% ; }
+
+.pdescricao{margin-top: 20px; color: white ; 
+	 margin-right: 800px; border:solid; margin-left: 30px; margin-bottom: 25px; }
+
+.p{
+	margin-left:30px ; margin-right: 30px; margin-top: 7px; color: white; margin-bottom: 25px;
+}
+
+
+
+
+.sobre{color:#00BFFF ; margin-left:30px; font-size: 30px; margin-top:20px; }
