--- a/css/listacurso.css
+++ b/css/listacurso.css
@@ -1,2 +1,13 @@
 .h1lista{color: #03A9F4; text-align: center;}
 
+.h2lista{ text-align: center; color: white;}
+.texto{text-align: center; color:white;}
+.adm{color:blue; border:solid;.margin-top: 100px;
+	 margin-right: 1000px; margin-left: 30px; margin-bottom: 10px; }
+
+.ADM2{text-align: center; margin-top: 80PX; margin-bottom: 10PX; color: white;}
+
+.ADM3{text-align: center; margin-bottom: 80PX ;color: white;}
+
+.ADS{color:blue; border:solid;
+	 margin-right: 100px; margin-left: 1000px; margin-bottom: 10px;  margin-top:10px; }
