Atualizado pelo Vini

--- a/css/descricao.css
+++ b/css/descricao.css
@@ -1,5 +1,5 @@
 .h1descricao{color: #0277BD; text-align: center;}
-
+.login{ width: 10%; height: 38px; background-color: black;  border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 8px;}
 .h2descricao{color: #D8D8D8 ; margin-left: 37% ;
 font-size: 52px; font-family: Arial;margin-top: 50px }
 
