--- a/css/disciplina.css
+++ b/css/disciplina.css
@@ -1,1 +1,2 @@
 .h1Disciplina{color: #4fc3f7; text-align: center;}
+.login{ width: 10%; height: 38px; background-color: black;  border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 8px;}
