--- a/css/estilogeral.css
+++ b/css/estilogeral.css
@@ -1,5 +1,5 @@
 *{padding: 0; margin: 0;}
-body{background-color: black;     #050A30; width: 100%;}
+body{background-color: black; width: 100%;}
 header{background-color: #01579b; width: 100%; height: 80px;}
 footer{background-color: #0288D1; width: 100%; height: 120px; border-top: #4fc3f7 solid;}
 .imagemHeader{width: 20%; height: 80px; float: left; margin-left: 5%; }
