--- a/css/estilogeral.css
+++ b/css/estilogeral.css
@@ -1,7 +1,7 @@
 *{padding: 0; margin: 0;}
 body{background-color: black;     #050A30; width: 100%;}
 header{background-color: #01579b; width: 100%; height: 80px;}
-footer{background-color: #0288D1; width: 100%; height: 120px; border-top: #4fc3f7 solid;}
+footer{background-color: #0288D1; width: 100%; height: 120px; border-top: #4fc3f7 solid; margin-top: 100%;}
 .imagemHeader{width: 20%; height: 80px; float: left; margin-left: 5%; }
 header div{background-color: #01579b; color: white; float: left; width: 5%; margin-left: 5%;  height: 70px; margin-top: 10px; font-weight: 100;}
 header div p{text-align: center; padding: 10px; font-size: 1.3em; width: 100%; height: 100%;}
