--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,1 +1,15 @@
-.h1noticias{color: #B3E5FC; text-align: center;}
+.h1noticias{color: #D8D8D8 ; position: absolute;
+font-size:50px; font-family: Arial; margin-top:25%; text-align: center;  margin-left: 23%;}
+.h1noticias:hover{color: #4fc3f7; cursor: pointer;}
+
+.FOTO{margin-left: 5%; margin-top: 10%;}
+
+.facul{text-align: center; color:white; font-size: 15px; font-family: Arial;}
+
+.ena{border:double; color: #696969; margin-left: 5%; margin-right:60%}
+
+.ga{text-align: center; color: blue; margin-left:10 ; font-size:30px;}
+
+.img {text-align: center; margin-left: 30%; }
+
+.texto{margin-left:2%; font-size: 20px; color:white;}
