--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,5 @@
 *{padding: 0; margin: 0; color: white; background-color: rgb(2, 0, 92);}
-body{width: 100%;}
+body{width: 100%;font-family: Montserrat, sans-serif}
 img{margin-left: 37%; width: 25%; margin-top: 100px;}
 div{width: 100%;}
 form{margin: 50px auto; width: 20%; }
