--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,2 +1,2 @@
 .h1noticias{color: #B3E5FC; text-align: center;}
-.login{ width: 10%; height: 38px; background-color: black;  border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 8px;}
+.login{ width: 10%; height: 40px; background-color: black; border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 10px; float:right;}
