--- a/css/estilogeral.css
+++ b/css/estilogeral.css
@@ -1,9 +1,10 @@
 *{padding: 0; margin: 0;}
-body{background-color: black; width: 100%;}
+a{text-decoration: none;}
+body{font-family: Montserrat, sans-serif; background-color: black; width: 100%; letter-spacing: 0;}
 header{background-color: #01579b; width: 100%; height: 80px;}
 footer{background-color: #0288D1; width: 100%; height: 120px; border-top: #4fc3f7 solid;}
 .imagemHeader{width: 20%; height: 80px; float: left; margin-left: 5%; }
-header div{background-color: #01579b; color: white; float: left; width: 5%; margin-left: 5%;  height: 70px; margin-top: 10px; font-weight: 100;}
+header div{background-color: #01579b; color: white; float: left; margin: 10px 2%; font-weight: 100;}
 header div p{text-align: center; padding: 10px; font-size: 1.3em; width: 100%; height: 100%;}
-.primeirobotao{margin-left: 10%;}
+.primeirobotao{margin-left: 8%;}
 header div:hover{color: #4fc3f7; cursor: pointer;}
