--- a/css/listacurso.css
+++ b/css/listacurso.css
@@ -1,6 +1,6 @@
 .h2lista{color: #D8D8D8 ;
 font-size:30px; font-family: Arial; margin-top:2%; text-align: center;}
-.login{ width: 10%; height: 38px; background-color: black;  border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 8px;}
+.login{ width: 10%; height: 40px; background-color: black; border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 10px; float:right;}
 .h2lista:hover{color: #4fc3f7; cursor: pointer;}
 
 .texto{text-align: center; color:white; font-size: 20px; font-family: Arial;}
