--- a/css/login.css
+++ b/css/login.css
@@ -6,14 +6,10 @@ form{margin: 50px auto; width: 20%; }
 form label{display:block;   padding-top:5px;}
 .bradius{ border-radius:6px; -webkit-border-radius:6px; -moz-border-radius:6px;}
 .sb{ background-color: gray; display:block; border:none; width:25%; height:40px; margin-top:10px;}
-.txt{font-size:18px; border:thin solid #000; height:40px; width:90%;}
+.txt{font-size:18px; border:thin solid #000; height:40px; width:100%;}
 .txt:focus{border:thin solid #000; box-shadow:0 2px 16px #666; -webkit-box-shadow:0 2px 16px #666; -moz-box-shadow:0 2px 16px #666;}
-a{text-decoration: none; float: right; margin-right: 10%;}
+a{text-decoration: none; float: right;}
 a:hover{text-decoration: underline;}
-button{cursor: pointer; font-weight: 400; font-size: 20px; padding: 0; width: 60%; background-color: #2C82C9; display: block; margin: 20px auto 35px auto; text-transform: none; position: relative;}
-
-textarea:focus, input:focus, select:focus {
-    box-shadow: 0 0 0 0;
-    border: 0 none;
-    outline: 0;
-} 
+button{cursor: pointer; font-weight: 400; font-size: 20px; padding: 0; height: 50px; width: 60%; background-color: #2C82C9; display: block; margin: 20px auto 35px auto; border: 1px solid transparent;}
+button:hover{color: black;}
+textarea:focus, input:focus, select:focus {box-shadow: 0 0 0 0;border: 0 none;outline: 0;}
