--- a/css/estilogeral.css
+++ b/css/estilogeral.css
@@ -8,7 +8,7 @@ header div p{text-align: center; padding: 10px; font-size: 1.3em; width: 100%; h
 header div:hover{color: #4fc3f7; cursor: pointer;}
 
 /* ######################## FOOTER ########################*/
-footer{background-color: black; width: 100%; height: 500px; border-top: #4fc3f7 solid; margin-top: 100%;}
+footer{background-color: black; width: 100%; height: 500px; border-top: #4fc3f7 solid;}
 .imgFooter{width: 80%; margin: 30px 10% 10px 10%; }
 .h3footer1{color: #116fff; font-size: 1em; text-align: center; width: 80%; margin: 10px 10% 10px 10%;}
 .h3footerAll{color: #116fff; font-size: 1.5em; width: 100%; margin: 30px 0 20px 0; text-align: center;}
