--- a/css/listacurso.css
+++ b/css/listacurso.css
@@ -17,19 +17,15 @@ font-size:30px; font-family: Arial; margin-top:2%; text-align: center;}
 
 .ADM3{text-align: center; padding-bottom:10% ;color: white;}
 
-.ADS{color:blue; border: solid; width:20%; height: 100px;}
 
-
-.teste{height: 120px; width: 100%; float: left;}
+.teste{height: 120px; width: 100%; }
 
 
 .ADS{color:blue; border:solid; width:20%; height: 100px; float: left; margin-left: 5%;}
 
-.ADS:hover{
-	background-color: blue; border: 1px white solid;}
+.ADS:hover{background-color: blue; border: 1px white solid;}
 
 
 .ADSE{color:blue; border:solid; width:20%; height: 100px; float: left; margin-left: 5%;}
 
-.ADSE:hover{
-	background-color: blue; border: 1px white solid;}
+.ADSE:hover{background-color: blue; border: 1px white solid;}
