--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,19 +1,22 @@
 
-.h1noticias{color: #B3E5FC; text-align: center; margin-top: 50%;}
+.h1noticias{color: #B3E5FC; text-align: center; margin-top: 20%;}
 .login{ width: 10%; height: 40px; background-color: black; border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 10px; float:right;}
 
 .h1noticias{color: #D8D8D8 ; position: absolute;
 font-size:50px; font-family: Arial; margin-top:25%; text-align: center;  margin-left: 23%;}
 .h1noticias:hover{color: #4fc3f7; cursor: pointer;}
 
-.FOTO{margin-left: 5%; margin-top: 10%;}
+.FOTO{margin-left: 5%; margin-top: 3%; width:90%}
 
-.facul{text-align: center; color:white; font-size: 15px; font-family: Arial;}
+.facul{text-align:center; color:white; font-size: 15px; font-family: Arial; margin-left:5%; margin-right:5% }
 
-.ena{border:double; color: #696969; margin-left: 5%; margin-right:60%}
+.ena{border:double; color: #696969; width:30%; height:100% }
 
 .ga{text-align: center; color: blue; margin-left:10 ; font-size:30px;}
 
 .img {text-align: center; margin-left: 30%; }
 
 .texto{margin-left:2%; font-size: 20px; color:white;}
+
+
+.mec{border:double; color: #696969; margin-left:40%; width:30%; height:100%; }
