--- a/css/descricao.css
+++ b/css/descricao.css
@@ -3,16 +3,6 @@
 .h2descricao{color: #D8D8D8 ; margin-left: 37% ;
 font-size: 52px; font-family: Arial;margin-top: 50px }
 
-.pdescricao{margin-top: 80px; color: white ; 
-	 margin-right: 800px; border:solid;
-	 margin-left: 30px; margin-bottom: 25px;
-	 font-family: Arial }
-
-.p{
-	margin-left:30px ; margin-right: 30px;
-	margin-top: 7px; color: white; margin-bottom: 25px;
-	font-family: Arial
-}
 
 .sub{
 	color: white;
@@ -28,38 +18,16 @@ font-size: 52px; font-family: Arial;margin-top: 50px }
 	margin-top: 2%;
 }
 
-.sobre{color:#00BFFF ; margin-left:30px; font-size: 30px; margin-top:20px; }
-
-
-.lateral1{
-	margin-right:20%;
-	margin: 0% 25% 50% 0%;
-}
-
-.bacharel{
-	text-align: right;
-	color: blue;
-
-}
-
-.periodo{
-	text-align: right;
-	color: white;
-
-}
-
-.ampulheta{
-	margin-left: 80%;
-}
-
-.noturno{
-	text-align: right;
-	color: blue;
-
-}
-
-.noturno2{
-	text-align: right;
-	color: white;
-}
-
+/*###################### SOBRE O CURSO #############################*/
+.DivPrincipal{width: 100%; height: 700px; }
+.divSobreCurso{width: 42%;border: blue solid 5px; float: left; margin-left: 8%}
+.tituloSobreCurso{color:#116fff; font-size: 40px;font-size: 1.8em; padding: 20px 20px 0 20px;}
+.pDescricaoCurso{color: white;font-family: 'Montserrat',sans-serif;padding: 15px 20px 20px 20px  ;}
+.h4Bacharelado{color: #116fff; font-size: 20px;font-family: 'Montserrat',sans-serif}
+.periodotexto{color: white;}
+.jsagudsayudgasu{float: left;width: 20%;}
+.noturnotexto{color: white;}
+.imgPeriodo{float: left; margin-top: 8px;}
+.divPeriodoPrincipal{width: 18%; float: left; margin-left: 10%; margin-top: 3%}
+.socialIcons{font-size: 2em; color: rgba(255,255,255,0.7); float: left; margin-top: 5px; margin-right: 5px;}
+.pInvestir{color: white;font-family:'Montserrat',sans-serif; font-size: 0.9em; margin-top: 70%; text-align: center;}
