--- a/AplicacaoLms/templates/disciplina.html
+++ b/AplicacaoLms/templates/disciplina.html
@@ -3,39 +3,29 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Noticias  </title>
-    <link rel="shortcut icon" href="img/icon-impacta.jpg" />
+    <title> Disciplina </title>
+    <link rel="shortcut icon" href="../static/img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/noticias.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/saiba.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/estilogeral.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/disciplina.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="main.js"></script>
 </head>
 <body>
     <header>
-        <img src="img/faculdadeimpacta.png" class="imagemHeader">
+        <img src="../static/img/faculdadeimpacta.png" class="imagemHeader">
 
-        <a href="index.html"> <div class="primeirobotao"> <p> Impacta </p> </div> </a>
-        <a href="disciplina.html"> <div> <P> Disciplina </p> </div> </a>
-        <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
-        <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
-        <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
-        <a href="login.html"><div class="login"> Login </div></a>
+        <a href="index"> <div class="primeirobotao"> <p>  Impacta  </p> </div> </a>
+        <a href="disciplina"> <div> <P> Disciplina </p> </div> </a>
+        <a href="listadecurso"> <div> <p> Lista </p> </div> </a>
+        <a href="descricao_cursos"> <div> <p> Detalhes </p> </div> </a>
+        <a href="noticias"> <div> <p> Notícias </p> </div> </a>
+        <a href="login"><div class="login"> Login </div></a>
     </header>
-
-             <div class="container banner-main" style="background: url(https://www.impacta.edu.br/uploads/pages/2017/12/smart-class-1513366480.png) center bottom;">
-            <h2 class="banner-title">Smart Class</h2>
-        </div>
-
-            <div class="p">
-            <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/logo-center.png" alt="[]" title=""></div>
-            <div class="h3">
-            <h3>Smart Class</h3></div>
-
-             
+    <h1 class="h1Disciplina"> DISCPLINA DOS CURSOS </h1>
     <footer>
       <section>
-        <img src="img/faculdadeimpacta.png" alt="" class="imgFooter">
+        <img src="../static/img/faculdadeimpacta.png" alt="" class="imgFooter">
         <h3 class="h3footer1"> Siga-nos nas redes sociais </h3>
         <div class="social-icons">
           <a href="https://www.facebook.com/FacImpacta/"> <i class="fab fa-facebook"></i> </a>
