--- a/AplicacaoLms/templates/descricao_cursos.html
+++ b/AplicacaoLms/templates/descricao_cursos.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> Detalhes </title>
-    <link rel="shortcut icon" href="img/icon-impacta.jpg" />
+    <link rel="shortcut icon" href="../static/img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/descricao.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/estilogeral.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/descricao.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="main.js"></script>
 </head>
 <body>
     <header>
-        <img src="img/faculdadeimpacta.png" class="imagemHeader">
+        <img src="../static/img/faculdadeimpacta.png" class="imagemHeader">
 
-        <a href="index.html"> <div class="primeirobotao"> <p>  Impacta </p> </div> </a>
-        <a href="disciplina.html"> <div> <P> Disciplina </p> </div> </a>
-        <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
-        <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
-        <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
-        <a href="login.html"><div class="login"> Login </div></a>
+        <a href="index"> <div class="primeirobotao"> <p>  Impacta </p> </div> </a>
+        <a href="disciplina"> <div> <P> Disciplina </p> </div> </a>
+        <a href="listadecurso"> <div> <p> Lista </p> </div> </a>
+        <a href="descricao_cursos"> <div> <p> Detalhes </p> </div> </a>
+        <a href="noticias"> <div> <p> Notícias </p> </div> </a>
+        <a href="login"><div class="login"> Login </div></a>
     </header>
     <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
 
@@ -30,40 +30,30 @@
     <br>
     <br>
     <button class="botao">INSCREVA-SE</button>
-    <div class="DivPrincipal">
-      <div class="divSobreCurso">
-        <h3 class="tituloSobreCurso"> SOBRE O CURSO: </h3>
-          <p class="pDescricaoCurso"> Tornar-se um líder. Ser um empreendedor. Fazer investimentos. Você tem inúmeras possibilidades na graduação em Administração da Faculdade Impacta.
-            <br>
-            <br>
-            O curso é voltado para as exigências do mercado de trabalho atual e aborda de forma ampla o universo corporativo. Você vai aprender a definir as melhores estratégias para o bom funcionamento das empresas, para gerar lucros, controlar gastos e se destacar com qualidade entre as concorrentes.
-            <br>
-            <br>            
-            Gerir equipes, negociar com fornecedores, solucionar diferentes problemas, atingir resultados positivos, aumentar a produtividade e aplicar novas tecnologias nas organizações também são funções do administrador.
-            <br>
-            <br>
-            Ao final do 2.º ano, os alunos já terão o diploma de Tecnólogo em Processos Gerenciais.
-          </p>
-      </div>
-      <div class="divPeriodoPrincipal">
-        <h4 class="h4Bacharelado">BACHARELADO</h4>
-     
-          <i class="fas fa-hourglass-start socialIcons"></i>
-          <div class="jsagudsayudgasu">
-            <h3 class="periodotexto">Peródo:</h3>
-            <p class="noturnotexto">Noturno |19h00 às 22h40|</p>
-          </div>
-
-          <div>
-            <h3 class="">Duração</h3>
-            <p class="">8 Semestres</p>
-          </div>
-          <h4 class="pInvestir">QUANTO VOU INVESTIR NO MEU FUTURO?</h4>
-          </div>
+    <div class="pdescricao">
+        <h3 class="sobre">Sobre o curso:</h3>
+    <p class="p">
+        Tornar-se um líder. Ser um empreendedor. Fazer investimentos. Você tem inúmeras possibilidades na graduação em Administração da Faculdade Impacta.
+        </p>
+        <p class="p">
+        O curso é voltado para as exigências do mercado de trabalho atual e aborda de forma ampla o universo corporativo. Você vai aprender a definir as melhores estratégias para o bom funcionamento das empresas, para gerar lucros, controlar gastos e se destacar com qualidade entre as concorrentes.
+        </p>
+        <p class="p">
+        Gerir equipes, negociar com fornecedores, solucionar diferentes problemas, atingir resultados positivos, aumentar a produtividade e aplicar novas tecnologias nas organizações também são funções do administrador.
+        </p>
+        <p class="p">
+        Ao final do 2.º ano, os alunos já terão o diploma de Tecnólogo em Processos Gerenciais.
+        </p>
+    </div>
+    <div class="lateral1">
+    <h4 class="bacharel">BACHARELADO</h4>
+    <p class="periodo">Peródo:</p>
+    <img class="ampulheta" width="30" height="30" src="https://images.vexels.com/media/users/3/151955/isolated/lists/13dfcfb1a5bda28b460884c69ccc1c17--cone-do-curso-de-ampulheta.png">
+    <p class="noturno">Noturno</p> <p class="noturno2">|19h00 às 22h40|</p>
     </div>
     <footer>
       <section>
-        <img src="img/faculdadeimpacta.png" alt="" class="imgFooter">
+        <img src="../static/img/faculdadeimpacta.png" alt="" class="imgFooter">
         <h3 class="h3footer1"> Siga-nos nas redes sociais </h3>
         <div class="social-icons">
           <a href="https://www.facebook.com/FacImpacta/"> <i class="fab fa-facebook"></i> </a>
