--- a/AplicacaoLms/templates/index.html
+++ b/AplicacaoLms/templates/index.html
@@ -3,28 +3,48 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Disciplina </title>
-    <link rel="shortcut icon" href="img/icon-impacta.jpg" />
+    <title> Home </title>
+    <link rel="shortcut icon" href="../static/img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/disciplina.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/estilogeral.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/index.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <script src="scripts/jquery.js"></script>
 </head>
 <body>
-    <header>
-        <img src="img/faculdadeimpacta.png" class="imagemHeader">
 
-        <a href="index.html"> <div class="primeirobotao"> <p>  Impacta  </p> </div> </a>
-        <a href="disciplina.html"> <div> <P> Disciplina </p> </div> </a>
-        <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
-        <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
-        <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
-        <a href="login.html"><div class="login"> Login </div></a>
+    <header>
+        <img src="static/img/faculdadeimpacta.png" class="imagemHeader">
+
+        <a href="index"> <div class="primeirobotao"> <p>Impacta </p> </div> </a>
+        <a href="disciplina"> <div> <p> Disciplina </p> </div> </a>
+        <a href="listadecurso"> <div> <p> Lista </p> </div> </a>
+        <a href="descricao_cursos"> <div> <p> Detalhes </p> </div> </a>
+        <a href="noticias"> <div> <p> Notícias </p> </div> </a>
+        <a href="login"><div class="login"> Login </div></a>
     </header>
-    <h1 class="h1Disciplina"> DISCPLINA DOS CURSOS </h1>
+
+        <div class="cem-porcento div-vestibular"> <img src="../static/img/vestibular-2019.png" alt="" class=""> </div>
+        <div class="cem-porcento"> <a href="#"> <div> INSCREVA-SE JÁ  </div> </a></div>
+        <h2 class="main_title text-center"> CONHEÇA NOSSOS CURSOS </h2>
+
+          <div class="div-Graduacao">
+          <a href="#"> <img src="../static/img/graduacao.jpg"  class="imagem-curso" alt="">
+          <h3 class="h3Graduacao"> Graduacao </h3><br><br>
+          <h4 class="h4Graduacao"> Cursos na área de Tecnologia, <br>Gestão e Design </h4>
+        </div></a>
+        <div class="div-transformacao"><h1 class="h1transformacao"> VOCÊ ESTÁ PREPARADO PARA A TRANSFORMAÇÃO DIGITAL?</h1></div>
+        <video class="video-transformacao" controls>
+          <source src="../static/video/video-transformacao.mp4" type="video/mp4">
+          <source src="mov_bbb.ogg" type="video/ogg">
+          Your browser does not support HTML5 video.
+        </video>
+
+        </video>
     <footer>
+
       <section>
-        <img src="img/faculdadeimpacta.png" alt="" class="imgFooter">
+        <img src="../static/img/faculdadeimpacta.png" alt="" class="imgFooter">
         <h3 class="h3footer1"> Siga-nos nas redes sociais </h3>
         <div class="social-icons">
           <a href="https://www.facebook.com/FacImpacta/"> <i class="fab fa-facebook"></i> </a>
