--- a/AplicacaoLms/templates/listadecurso.html
+++ b/AplicacaoLms/templates/listadecurso.html
@@ -4,22 +4,23 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> Home </title>
-    <link rel="shortcut icon" href="img/icon-impacta.jpg" />
+    <link rel="shortcut icon" href="../static/img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/listacurso.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/estilogeral.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/listacurso.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="main.js"></script>
 </head>
 <body>
     <header>
-        <img src="img/faculdadeimpacta.png" class="imagemHeader">
+        <img src="../static/img/faculdadeimpacta.png" class="imagemHeader">
 
-        <a href="index.html"> <div class="primeirobotao"> <p>  Impacta  </p> </div> </a>
-        <a href="disciplina.html"> <div> <P> Disciplina </p> </div> </a>
-        <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
-        <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
-        <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
-        <a href="login.html"><div class="login"> Login </div></a>
+        <a href="index"> <div class="primeirobotao"> <p>  Impacta  </p> </div> </a>
+        <a href="disciplina"> <div> <P> Disciplina </p> </div> </a>
+        <a href="listadecurso"> <div> <p> Lista </p> </div> </a>
+        <a href="descricao_cursos"> <div> <p> Detalhes </p> </div> </a>
+        <a href="noticias"> <div> <p> Notícias </p> </div> </a>
+        <a href="login"><div class="login"> Login </div></a>
     </header> <br> <br>
 
 
@@ -111,7 +112,7 @@ Segundo pesquisa realizada pelo LinkedIn, a Instituição possui 98,2% de contra
 
 <footer>
   <section>
-    <img src="img/faculdadeimpacta.png" alt="" class="imgFooter">
+    <img src="../static/img/faculdadeimpacta.png" alt="" class="imgFooter">
     <h3 class="h3footer1"> Siga-nos nas redes sociais </h3>
     <div class="social-icons">
       <a href="https://www.facebook.com/FacImpacta/"> <i class="fab fa-facebook"></i> </a>
