--- a/AplicacaoLms/templates/login.html
+++ b/AplicacaoLms/templates/login.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> Login </title>
-    <link rel="shortcut icon" href="img/icon-impacta.jpg" />
+    <link rel="shortcut icon" href="../static/img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/login.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/login.css" />
     <script src="main.js"></script>
 </head>
 <body>
     <div>
-        <img src="img/faculdadeimpacta.png" class="imagemHeader">
+        <img src="../static/img/faculdadeimpacta.png" class="imagemHeader">
     </div>
     <form action="post" class="form acomodar">
         <label for=""></label>
