--- a/AplicacaoLms/templates/index.html
+++ b/AplicacaoLms/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <img src="static/img/faculdadeimpacta.png" class="imagemHeader">
+        <img src="../static/img/faculdadeimpacta.png" class="imagemHeader">
 
         <a href="index"> <div class="primeirobotao"> <p>Impacta </p> </div> </a>
         <a href="disciplina"> <div> <p> Disciplina </p> </div> </a>
