--- a/AplicacaoLms/templates/saiba_mais.html
+++ b/AplicacaoLms/templates/saiba_mais.html
@@ -29,8 +29,27 @@
 
             <div class="p">
             <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/logo-center.png" alt="[]" title=""></div>
+            
             <div class="h3">
             <h3>Smart Class</h3></div>
+            
+            <div class="texto">           
+             <p>
+             O Smart Class é um sistema de ensino inédito da Faculdade Impacta que permite assistir todas as disciplinas dos cursos no formato digital. O aluno matriculado em qualquer 
+             graduação da Faculdade Impacta tem acesso a mais de 30 mil aulas, garantindo uma formação completa e interdisciplinar.
+            </p></div>
+
+            <div class="h3">
+                <h4>Como funciona o Smart Class?</h4>
+            </div>
+
+            <div class="texto">
+                <p>
+             As salas de aula da Faculdade Impacta são equipadas com lousas eletrônicas, que capturam todos os pontos das aulas presenciais, como voz, escrita dinâmica, vídeos e navegação do professor. Todo o conteúdo é 
+            gravado e disponibilizado em uma sala de ensino virtual para que o aluno assista quando e onde quiser, de qualquer plataforma digital.
+                </p>
+            </div>
+
 
              
     <footer>
