--- a/AplicacaoLms/templates/descricao_cursos.html
+++ b/AplicacaoLms/templates/descricao_cursos.html
@@ -55,11 +55,19 @@
           </div>
 
           <div>
-            <h3 class="">Duração</h3>
-            <p class="">8 Semestres</p>
+            <h3 class="duracao">Duração:</h3>
+            <p class="semestre">8 Semestres</p>
           </div>
           <h4 class="pInvestir">QUANTO VOU INVESTIR NO MEU FUTURO?</h4>
           </div>
+          
+          <div class="divcaixinha">
+            <h3 class="noturno2">Noturno</h3>
+            <p class="preco-adm">R$485,00</p>
+            <p class="preco-adm2">R$363,75</p>
+            <p class="tesxtinho1">*Este valor é referente ao Plano Estendido Impacta e a mensalidade pode sofrer alterações a cada semestre.</p>
+          </div>
+          <button class="botao2">INSCREVA-SE</button>
     </div>
     <footer>
       <section>
