--- a/AplicacaoLms/static/descricao.css
+++ b/AplicacaoLms/static/descricao.css
@@ -16,18 +16,66 @@ font-size: 52px; font-family: Arial;margin-top: 50px }
 	background-color: blue;
 	margin-left: 47%;
 	margin-top: 2%;
+	position: absolute;
+	border-radius: 50px;
+	width: 350px;
+    font-size: 1.7em;
+    font-weight: 700;
+    padding: 10px 20px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+	background: #116fff;
+	display: inline-block;
+	text-align: center;
+	line-height: 1;
+    text-shadow: 2px 1px rgba(0,0,0,.2);
+	 margin-top: 0px;
+	margin-left: 38%;
+}
+
+.botao2{
+	color: white;
+	background-color: blue;
+	margin-left: 47%;
+	margin-top: 10%;
+	position: absolute;
+	border-radius: 50px;
+	width: 350px;
+    font-size: 1.7em;
+    font-weight: 700;
+    padding: 10px 20px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+	background: #116fff;
+	display: inline-block;
+	text-align:left;
+	line-height: 1;
+    text-shadow: 2px 1px rgba(0,0,0,.2);
+	 margin-top: 0px;
+	margin-left: 38%;
 }
 
 /*###################### SOBRE O CURSO #############################*/
-.DivPrincipal{width: 100%; height: 700px; }
+.DivPrincipal{width: 100%; height: 700px; margin-top: 9% }
 .divSobreCurso{width: 42%;border: blue solid 5px; float: left; margin-left: 8%}
 .tituloSobreCurso{color:#116fff; font-size: 40px;font-size: 1.8em; padding: 20px 20px 0 20px;}
 .pDescricaoCurso{color: white;font-family: 'Montserrat',sans-serif;padding: 15px 20px 20px 20px  ;}
 .h4Bacharelado{color: #116fff; font-size: 20px;font-family: 'Montserrat',sans-serif}
-.periodotexto{color: white;}
+.periodotexto{color: white;font-size: 15px}
 .jsagudsayudgasu{float: left;width: 20%;}
 .noturnotexto{color: white;}
 .imgPeriodo{float: left; margin-top: 8px;}
 .divPeriodoPrincipal{width: 18%; float: left; margin-left: 10%; margin-top: 3%}
 .socialIcons{font-size: 2em; color: rgba(255,255,255,0.7); float: left; margin-top: 5px; margin-right: 5px;}
-.pInvestir{color: white;font-family:'Montserrat',sans-serif; font-size: 0.9em; margin-top: 70%; text-align: center;}
+.duracao{color: white;font-size: 15px;font-family: 'Montserrat',sans-serif;margin-top: 50%}
+.semestre{color:#116fff;font-size: 14px;font-family: 'Montserrat',sans-serif;margin-top: 5%}
+.pInvestir{color: white;font-family:'Montserrat',sans-serif; font-size: 0.9em; margin-top: 14%; text-align: center;}
+
+/*###################### caixinha embaixo #############################*/
+.divcaixinha{width: 25%; float: left;margin-left: 10%; margin-top: 4%; background: #0d181d; }
+.noturno2{color: white; margin-left: 16px;padding: 10px 20px 0 4px;}
+.preco-adm{color:white;font-size: 15px ; margin-left: 16px;padding:10px 20px 0px 4px ;text-decoration: line-through;}
+.preco-adm2{color:#116fff;font-size: 18px; margin-left: 16px;padding: 10px 20px 0px 4px;}
+.tesxtinho1{color: white;font-size: 11px; margin-left: 10px; padding: 10px 20px 6px 4px;}
