--- a/AplicacaoLms/static/disciplina.css
+++ b/AplicacaoLms/static/disciplina.css
@@ -1,2 +1,26 @@
-.h1Disciplina{color: #4fc3f7; text-align: center;}
+.h1Disciplina{color: #4fc3f7; text-align: center; margin-top: 5%;}
 .login{ width: 10%; height: 40px; background-color: black; border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 10px; float:right;}
+
+
+/* #################### DISCIPLINAS ####################*/
+.DivGeralDisciplina{width: 90%; margin: 0 auto; display:block; height: 200px;}
+.DivDisciplinas{color: rgba(255,255,255,0.7); width: 22.5%; float: left; border: 2px solid #4fc3f7; height: 200px; border-radius: 5px;  display:block; margin: 1%;}
+.DivDisciplinas:fisrt-child{margin-left: 0;}
+.DivDisciplinas:last-child{margin-right: 0;}
+.DivDisciplinas h3{text-align: center; font-size: 1.2em;}
+.DivDisciplinas img{margin: 5% auto; display: block; width: 50px; height: 50px;}
+.btn{border: transparent; width: 50%; height: 45px; background-color: #116fff; color: white; border-radius: 5px; cursor: pointer; display: block;}
+.btnMargin{margin: 40px auto 0 auto;}
+.btnAdsMargin{margin: 18px auto 0 auto;}
+.btn:hover{color: black;}
+
+/* #################### MARTRIZ CURRICULAR ####################*/
+.MatrizCurricular{color: #116fff; text-align: center; font-size: 3em;}
+.h2SelecioneCurso{color: white; text-align: center; }
+
+
+.DivMatrizCurricularGeral{width: 90%; display: block; margin: 3% auto; ;background-color: #192327; height: 480px;}
+.DivMatrizCurricularGeral ul{ width: 25%; float: left;}
+.DivMatrizCurricularGeral ul li{background-color: #0d181d; color: white; text-decoration: none; display: block; text-align: center; border-bottom: 1px solid white; padding: 19.9px 0; cursor: pointer;} 
+.DivPDisciplinas{width: 75%; margin-left: 25%;height: 100%;}
+.DivPDisciplinas p{color: white; padding: 20px 0 0 50px; } 
