--- a/AplicacaoLms/templates/descricao_cursos.html
+++ b/AplicacaoLms/templates/descricao_cursos.html
@@ -48,13 +48,12 @@
       <div class="divPeriodoPrincipal">
         <h4 class="h4Bacharelado">BACHARELADO</h4>
      
-          <i class="fas fa-hourglass-start socialIcons"></i>
           <div class="jsagudsayudgasu">
             <h3 class="periodotexto">Peródo:</h3>
             <p class="noturnotexto">Noturno |19h00 às 22h40|</p>
           </div>
 
-          <div>
+          <div class="divduracao">
             <h3 class="duracao">Duração:</h3>
             <p class="semestre">8 Semestres</p>
           </div>
@@ -66,8 +65,8 @@
             <p class="preco-adm">R$485,00</p>
             <p class="preco-adm2">R$363,75</p>
             <p class="tesxtinho1">*Este valor é referente ao Plano Estendido Impacta e a mensalidade pode sofrer alterações a cada semestre.</p>
+            <button class="botao2">INSCREVA-SE</button>
           </div>
-          <button class="botao2">INSCREVA-SE</button>
     </div>
     <footer>
       <section>
