--- a/AplicacaoLms/static/saiba.css
+++ b/AplicacaoLms/static/saiba.css
@@ -38,3 +38,9 @@ justify-content:center;}
 	margin-right: 15%;
 	line-height: 1.8;
 }
+.imgsaiba{
+  width: 80%;
+  height:300%;
+  margin-bottom:30%;
+  margin-left: 10%
+}
