--- a/AplicacaoLms/templates/noticias.html
+++ b/AplicacaoLms/templates/noticias.html
@@ -21,6 +21,18 @@
         <a href="noticias"> <div> <p> Notícias </p> </div> </a>
         <a href="login"><div class="login"> Login </div></a>
     </header>
+
+
+
+    <div class="container banner-main" style="background: url(https://www.impacta.edu.br/uploads/pages/2017/12/sobre-1513365351.png) center bottom;">
+        <h4 class="banner-title">Notícias</h4>
+    </div>
+    
+    <div class="p">
+            <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/logo-center.png" alt="[]" title=""></div>
+    
+
+    
     <h2 class="h2">PRÊMIOS E RECONHECIMENTOS </h2>
 
      <div class="divTexto">
@@ -44,6 +56,9 @@
 
 
     </div>
+
+
+    
     <footer>
       <section>
         <img src="../static/img/faculdadeimpacta.png" alt="" class="imgFooter">
