--- a/AplicacaoLms/templates/saiba_mais.html
+++ b/AplicacaoLms/templates/saiba_mais.html
@@ -49,7 +49,14 @@
              As salas de aula da Faculdade Impacta são equipadas com lousas eletrônicas, que capturam todos os pontos das aulas presenciais, como voz, escrita dinâmica, vídeos e navegação do professor. Todo o conteúdo é 
             gravado e disponibilizado em uma sala de ensino virtual para que o aluno assista quando e onde quiser, de qualquer plataforma digital.
                 </p>
+            
             </div>
+
+            <div class="imgsaiba">
+                <img src="../static/img/ti.jpg" alt="">
+            </div>
+
+            
 
 
              
