--- a/AplicacaoLms/static/descricao.css
+++ b/AplicacaoLms/static/descricao.css
@@ -1,12 +1,12 @@
 .h1descricao{color: #0277BD; text-align: center;}
 .login{ width: 10%; height: 40px; background-color: black; border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 10px; float:right;}
-.h2descricao{color: #D8D8D8 ; margin-left: 37% ;
+.h2descricao{color: #D8D8D8 ; margin-left: 6% ;
 font-size: 52px; font-family: Arial;margin-top: 50px }
 
 
 .sub{
 	color: white;
-	margin-left: 35%;
+	margin-left: 6%;
 	font-size: 1.4em;
     font-style: italic;
 }
@@ -31,7 +31,13 @@ font-size: 52px; font-family: Arial;margin-top: 50px }
 	line-height: 1;
     text-shadow: 2px 1px rgba(0,0,0,.2);
 	 margin-top: 0px;
-	margin-left: 38%;
+	margin-left: 6%;
+}
+
+.videoADM{
+	float: left;
+	width: 50%;
+	height: 50px;
 }
 
 .botao2{
@@ -59,18 +65,18 @@ font-size: 52px; font-family: Arial;margin-top: 50px }
 
 /*###################### SOBRE O CURSO #############################*/
 .DivPrincipal{width: 100%; height: 700px; margin-top: 9% }
-.divSobreCurso{width: 42%;border: blue solid 5px; float: left; margin-left: 8%}
-.tituloSobreCurso{color:#116fff; font-size: 40px;font-size: 1.8em; padding: 20px 20px 0 20px;}
-.pDescricaoCurso{color: white;font-family: 'Montserrat',sans-serif;padding: 15px 20px 20px 20px  ;}
+.divSobreCurso{width: 42%;background:#0d181d; float: left; margin-left: 8%;}
+.tituloSobreCurso{color:#116fff; font-size: 40px;font-size: 1.8em; padding: 30px 30px 0 20px;font-family: 'Montserrat',sans-serif}
+.pDescricaoCurso{color: white;font-family: 'Montserrat',sans-serif;padding: 15px 20px 50px 20px  ;}
 .h4Bacharelado{color: #116fff; font-size: 20px;font-family: 'Montserrat',sans-serif;font-weight: 200;}
 .periodotexto{color: white;font-size: 15px}
 .jsagudsayudgasu{float: left;width: 75%;margin-top: 6%; margin-left: 5%}
 .noturnotexto{color: white;}
-.divPeriodoPrincipal{width: 18%; float: left; margin-left: 10%; margin-top: 3%}
+.divPeriodoPrincipal{width: 30%; float: left; margin-left: 10%; margin-top: 3%}
 .socialIcons{font-size: 2em; color: rgba(255,255,255,0.7); float: left; margin-top: 5px; margin-right: 5px;}
 .duracao{color: white;font-size: 15px;font-family: 'Montserrat',sans-serif;margin-top: 28%}
 .semestre{color:#116fff;font-size: 14px;font-family: 'Montserrat',sans-serif;margin-top: 5%}
-.pInvestir{width:147%;color: white;font-family:'Montserrat',sans-serif; font-size: 1.1em; margin-top: 14%; text-align: center;font-weight: 200;}
+.pInvestir{color: white;font-family:'Montserrat',sans-serif;margin-top: 14%; text-align: left;font-weight: 200;}
 .divduracao{margin-left: 5%}
 /*###################### caixinha embaixo #############################*/
 .divcaixinha{width: 25%; float: left;margin-left: 10%; margin-top: 2%; background: #0d181d; }
