--- a/AplicacaoLms/templates/descricao_cursos.html
+++ b/AplicacaoLms/templates/descricao_cursos.html
@@ -22,6 +22,7 @@
         <a href="noticias"> <div> <p> Notícias </p> </div> </a>
         <a href="login"><div class="login"> Login </div></a>
     </header>
+    <div>
     <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
 
     <h2 class="h2descricao">Administração</h2>
@@ -30,9 +31,11 @@
     <br>
     <br>
     <button class="botao">INSCREVA-SE</button>
+    <iframe class="videoADM" src="https://www.youtube.com/embed/Qg8aRSW4Umk?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <div class="DivPrincipal">
       <div class="divSobreCurso">
-        <h3 class="tituloSobreCurso"> SOBRE O CURSO: </h3>
+        <h3 class="tituloSobreCurso"> SOBRE O CURSO </h3>
           <p class="pDescricaoCurso"> Tornar-se um líder. Ser um empreendedor. Fazer investimentos. Você tem inúmeras possibilidades na graduação em Administração da Faculdade Impacta.
             <br>
             <br>
@@ -42,7 +45,7 @@
             Gerir equipes, negociar com fornecedores, solucionar diferentes problemas, atingir resultados positivos, aumentar a produtividade e aplicar novas tecnologias nas organizações também são funções do administrador.
             <br>
             <br>
-            Ao final do 2.º ano, os alunos já terão o diploma de Tecnólogo em Processos Gerenciais.
+            Ao final do 2.º ano, os alunos já terão o diploma de <strong>Tecnólogo em Processos Gerenciais</strong>.
           </p>
       </div>
       <div class="divPeriodoPrincipal">
@@ -65,7 +68,7 @@
             <p class="preco-adm">R$485,00</p>
             <p class="preco-adm2">R$363,75</p>
             <p class="tesxtinho1">*Este valor é referente ao Plano Estendido Impacta e a mensalidade pode sofrer alterações a cada semestre.</p>
-            <button class="botao2">INSCREVA-SE</button>
+            <button class="botao2">INSCREVA-SE</button>,
           </div>
     </div>
     <footer>
