alteraçao feita pela katy

--- a/AplicacaoLms/static/saiba.css
+++ b/AplicacaoLms/static/saiba.css
@@ -41,6 +41,9 @@ justify-content:center;}
 .imgsaiba{
   width: 80%;
   height:300%;
-  margin-bottom:30%;
   margin-left: 10%
 }
+ .porra{
+	 background-color: white;
+ }
+
