--- a/AplicacaoLms/templates/noticias.html
+++ b/AplicacaoLms/templates/noticias.html
@@ -53,9 +53,26 @@
                 </p>
 
                 <h5>Visão</h5>
+                <p class="faculdade">
+                    Ser o melhor em educação, conhecimento, capacitação e inovação com liderança, presença e referência mundial.
+                </p>
 
                 <h5>Valores</h5>
-                
+                 <p class="faculdade">
+                    Encantar o cliente <br> <br>
+
+                    Paixão pela excelência e alta performance <br> <br>
+                    
+                    Busca de níveis superiores de inovação e conhecimento <br> <br>
+                    
+                    Iniciativa e trabalho em equipe com colaboradores comprometidos e criativos <br> <br>
+                    
+                    Crescimento com rentabilidade e resultados que superem expectativas <br> <br>
+                    
+                    Empreendedorismo com ética e integridade
+                    
+                    
+                 </p>
             
     <h2 class="h2">PRÊMIOS E RECONHECIMENTOS </h2>
 
