--- a/AplicacaoLms/templates/saiba_mais.html
+++ b/AplicacaoLms/templates/saiba_mais.html
@@ -53,8 +53,11 @@
             </div>
 
             <div class="imgsaiba">
-                <img src="../static/img/ti.jpg" alt="">
+                <img src="../static/img/play.jpg" alt="">
             </div>
+            <h4>Como funciona o Smart Class?</h4>
+
+              
 
             
 
