alteraçao feita pela katelyn

--- a/AplicacaoLms/templates/disciplina.html
+++ b/AplicacaoLms/templates/disciplina.html
@@ -29,25 +29,25 @@
       <div class="DivDisciplinas" id="Sistemas"> 
         <img src="../static/img/Sistenas.png" alt="">
         <h3> Sistemas de Informação</h3>
-        <button id="btnSistemas" class="btn btnMargin"> Cloque Para Mostrar! </button>
+        <button id="btnSistemas" class="btn btnMargin"> Clique Para Mostrar! </button>
       </div>
 
       <div class="DivDisciplinas" id="Analise">
         <img src="../static/img/Análise-e-Desenvolvimento.png" alt="">
         <h3> Análise e Desenvolvimento de Sistemas </h3>
-        <button id="btnAds" class="btn btnAdsMargin"> Cloque Para Mostrar! </button>
+        <button id="btnAds" class="btn btnAdsMargin"> Clique Para Mostrar! </button>
       </div>
 
       <div class="DivDisciplinas" id="Redes">
         <img src="../static/img/Redes.png" alt="">
         <h3> Redes de Computadores </h3>
-        <button id="btnRedes" class="btn btnMargin"> Cloque Para Mostrar! </button>
+        <button id="btnRedes" class="btn btnMargin"> Clique Para Mostrar! </button>
       </div>
 
       <div class="DivDisciplinas" id="Administracao">
         <img src="../static/img/Administracao.png" alt="">
         <h3> Administração</h3>
-        <button id="btnAdm" class="btn btnMargin"> Cloque Para Mostrar! </button>
+        <button id="btnAdm" class="btn btnMargin"> Clique Para Mostrar! </button>
       </div>
     </div>
     <div class="DivDosBotoes">
@@ -62,13 +62,13 @@
     <div class="DivMatrizCurricularGeral">
       <ul>
         <li> 1º Semestre </li>
-        <li> 2º Semestr </li>
-        <li> 3º Semestr</li>
-        <li> 4º Semestr </li>
-        <li> 5º Semestr </li>
-        <li> 6º Semestr </li>
-        <li> 7º Semestr </li>
-        <li> 8º Semestr</li>
+        <li> 2º Semestre </li>
+        <li> 3º Semestre </li>
+        <li> 4º Semestre </li>
+        <li> 5º Semestre </li>
+        <li> 6º Semestre </li>
+        <li> 7º Semestre </li>
+        <li> 8º Semestre </li>
       </ul>
       <div class="DivPDisciplinas">
         <p id="disciplina1">  </p>
