--- a/AplicacaoLms/templates/login.html
+++ b/AplicacaoLms/templates/login.html
@@ -20,7 +20,7 @@
         <input type="password" class="bradius sb txt" placeholder="Digite sua senha">
         <a href="">Esqueceu sua senha?</a><br><br>
 
-        <button type="submit"> FAZER LOGIN </button>
+        < <button > <a href="portal">fazer login </a> </button> 
     </form>
 </body>
 </html>
