--- a/AplicacaoLms/static/descricao.css
+++ b/AplicacaoLms/static/descricao.css
@@ -1,7 +1,7 @@
 .h1descricao{color: #0277BD; text-align: center;}
 .login{ width: 10%; height: 40px; background-color: black; border-radius: 20px; text-align: center; font-size: 1.4em; padding-top: 10px; float:right;}
 .h2descricao{color: #D8D8D8 ; margin-left: 6% ;
-font-size: 52px; font-family: Arial;margin-top: 50px }
+font-size: 52px; font-family: Arial;margin-top: 80px }
 
 
 .sub{
@@ -35,9 +35,25 @@ font-size: 52px; font-family: Arial;margin-top: 50px }
 }
 
 .videoADM{
-	float: left;
-	width: 50%;
-	height: 50px;
+	float: right;
+	width: 40%;
+    min-height: 250px; 
+    display: block;
+    margin-top: 3%;
+    margin-right: 9%;
+}
+
+.videoADM2{
+	width: 80%;
+}
+
+.img_ADM{
+    background-size: cover!important;
+    background-repeat: no-repeat!important;
+    min-height: 370px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .botao2{
@@ -64,7 +80,7 @@ font-size: 52px; font-family: Arial;margin-top: 50px }
 }
 
 /*###################### SOBRE O CURSO #############################*/
-.DivPrincipal{width: 100%; height: 700px; margin-top: 9% }
+.DivPrincipal{width: 100%; height: 700px;}
 .divSobreCurso{width: 42%;background:#0d181d; float: left; margin-left: 8%;}
 .tituloSobreCurso{color:#116fff; font-size: 40px;font-size: 1.8em; padding: 30px 30px 0 20px;font-family: 'Montserrat',sans-serif}
 .pDescricaoCurso{color: white;font-family: 'Montserrat',sans-serif;padding: 15px 20px 50px 20px  ;}
@@ -84,3 +100,51 @@ font-size: 52px; font-family: Arial;margin-top: 50px }
 .preco-adm{color:white;font-size: 15px ; margin-left: 16px;padding:10px 20px 0px 4px ;text-decoration: line-through;}
 .preco-adm2{color:#116fff;font-size: 18px; margin-left: 16px;padding: 10px 20px 0px 4px;}
 .tesxtinho1{color: white;font-size: 11px; margin-left: 10px; padding: 10px 20px 6px 4px;text-align: justify;}
+
+/*######################### REDE DE COMPUTADORES ###########################*/
+.h2descricao_redes{
+	color: #D8D8D8;
+	text-align: center;
+	font-size: 4em;
+	font-family: Arial;
+}
+	
+	
+.sub_redes{
+	color: white;
+	margin-left: 37%;
+	font-size: 1.4em;
+	font-style: italic;
+}
+	
+.botao_redes{
+	color: white;
+	background-color: blue;
+	margin-left: 47%;
+	margin-top: 2%;
+	position: absolute;
+	border-radius: 50px;
+	width: 350px;
+	font-size: 1.7em;
+	font-weight: 700;
+	padding: 10px 20px;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	background: #116fff;
+	display: inline-block;
+	text-align: center;
+	line-height: 1;
+	text-shadow: 2px 1px rgba(0,0,0,.2);
+	margin-top: 0px;
+	margin-left: 37%;
+}
+
+.img_redes{
+    background-size: cover!important;
+    background-repeat: no-repeat!important;
+    min-height: 360px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
