--- a/AplicacaoLms/templates/descricao_cursos.html
+++ b/AplicacaoLms/templates/descricao_cursos.html
@@ -22,16 +22,26 @@
         <a href="noticias"> <div> <p> Notícias </p> </div> </a>
         <a href="login"><div class="login"> Login </div></a>
     </header>
-    <div>
-    <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
 
-    <h2 class="h2descricao">Administração</h2>
-    <br>
-    <small class="sub">Inteligência de Negócios e Gestão de Projetos</small>
-    <br>
-    <br>
-    <button class="botao">INSCREVA-SE</button>
-    <iframe class="videoADM" src="https://www.youtube.com/embed/Qg8aRSW4Umk?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="img_ADM" style="background: url(https://www.impacta.edu.br/uploads/cursos/2018/05/administracao-1527075475.png);">
+      <div>
+        <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
+    
+        <div class="videoADM">
+        <video class="videoADM2" width="400" controls>
+          <source src="../static/video/Graduação-em-Administração.mp4" type="video/mp4">
+        </video>
+        
+        </div>
+    
+        <h2 class="h2descricao">Administração</h2>
+        <br>
+        <small class="sub">Inteligência de Negócios e Gestão de Projetos</small>
+        <br>
+        <br>
+        <button class="botao">INSCREVA-SE</button>
+    </div>
+
     </div>
     <div class="DivPrincipal">
       <div class="divSobreCurso">
@@ -71,6 +81,57 @@
             <button class="botao2">INSCREVA-SE</button>,
           </div>
     </div>
+
+    <div class="img_redes" style="background: url(https://www.impacta.edu.br/uploads/cursos/2018/05/redes-de-computadores-1527075769.png);">
+      <div>
+        <h2 class="h2descricao_redes">Redes de computadores</h2>
+        <br>
+        <small class="sub_redes">Cloud Computing & Cyber Security</small>
+        <br>
+        <br>
+        <button class="botao_redes">INSCREVA-SE</button>
+    </div>
+
+    </div>
+    <div class="DivPrincipal">
+      <div class="divSobreCurso">
+        <h3 class="tituloSobreCurso"> SOBRE O CURSO </h3>
+          <p class="pDescricaoCurso"> Tornar-se um líder. Ser um empreendedor. Fazer investimentos. Você tem inúmeras possibilidades na graduação em Administração da Faculdade Impacta.
+            <br>
+            <br>
+            O curso é voltado para as exigências do mercado de trabalho atual e aborda de forma ampla o universo corporativo. Você vai aprender a definir as melhores estratégias para o bom funcionamento das empresas, para gerar lucros, controlar gastos e se destacar com qualidade entre as concorrentes.
+            <br>
+            <br>            
+            Gerir equipes, negociar com fornecedores, solucionar diferentes problemas, atingir resultados positivos, aumentar a produtividade e aplicar novas tecnologias nas organizações também são funções do administrador.
+            <br>
+            <br>
+            Ao final do 2.º ano, os alunos já terão o diploma de <strong>Tecnólogo em Processos Gerenciais</strong>.
+          </p>
+      </div>
+      <div class="divPeriodoPrincipal">
+        <h4 class="h4Bacharelado">BACHARELADO</h4>
+     
+          <div class="jsagudsayudgasu">
+            <h3 class="periodotexto">Peródo:</h3>
+            <p class="noturnotexto">Noturno |19h00 às 22h40|</p>
+          </div>
+
+          <div class="divduracao">
+            <h3 class="duracao">Duração:</h3>
+            <p class="semestre">8 Semestres</p>
+          </div>
+          <h4 class="pInvestir">QUANTO VOU INVESTIR NO MEU FUTURO?</h4>
+          </div>
+          
+          <div class="divcaixinha">
+            <h3 class="noturno2">Noturno</h3>
+            <p class="preco-adm">R$485,00</p>
+            <p class="preco-adm2">R$363,75</p>
+            <p class="tesxtinho1">*Este valor é referente ao Plano Estendido Impacta e a mensalidade pode sofrer alterações a cada semestre.</p>
+            <button class="botao2">INSCREVA-SE</button>
+          </div>
+    </div>
+
     <footer>
       <section>
         <img src="../static/img/faculdadeimpacta.png" alt="" class="imgFooter">
